# AdapTrack

./: .gitignore  CMakeLists.txt  README.md
DetectorTrainer/: CMakeLists.txt  DetectorTrainer.cpp  stacktrace.hpp
DetectorTrainer/src/: DetectorTester.cpp  DetectorTester.hpp  DetectorTrainer.cpp  DetectorTrainer.hpp  DetectorTrainingApp.cpp
DetectorTrainingApp/src/: DetectorTester.cpp  DetectorTester.hpp
MultiTracker/: CMakeLists.txt  MultiTracker.cpp  MultiTrackerEvaluator.cpp
SingleTracker/: CMakeLists.txt  SingleTracker.cpp  StopWatch.hpp  stacktrace.hpp
Tracker/: CMakeLists.txt  Evaluator.cpp  Tracker.cpp
VideoPlayer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.hpp
VideoPlayerApp/: CMakeLists.txt
adaptiveTrackingApp/: AdaptiveTracking.cpp  CMakeLists.txt  default.cfg
benchmarkApp/: BenchmarkRunner.cpp  CMakeLists.txt  default.cfg
headTrackingApp/: CMakeLists.txt  HeadTracking.cpp  default.cfg
libClassification/: CMakeLists.txt
libClassification/include/classification/: AgeBasedExampleManagement.hpp  BinaryClassifier.hpp  ClassifierTrainer.hpp  ConfidenceBasedExampleManagement.hpp  EmptyExampleManagement.hpp  ExampleManagement.hpp  HistogramIntersectionKernel.hpp  IncrementalClassifierTrainer.hpp  IncrementalLinearSvmTrainer.hpp  Kernel.hpp  KernelVisitor.hpp  LinearKernel.hpp  PolynomialKernel.hpp  ProbabilisticClassifier.hpp  ProbabilisticSupportVectorMachine.hpp  ProbabilisticSvmClassifier.hpp  PseudoIncrementalClassifierTrainer.hpp  PseudoProbabilisticSvmTrainer.hpp  RbfKernel.hpp  SupportVectorMachine.hpp  SvmClassifier.hpp  UnlimitedExampleManagement.hpp  VectorBasedExampleManagement.hpp
libClassification/src/classification/: AgeBasedExampleManagement.cpp  ConfidenceBasedExampleManagement.cpp  ProbabilisticSupportVectorMachine.cpp  ProbabilisticSvmClassifier.cpp  SupportVectorMachine.cpp  SvmClassifier.cpp  VectorBasedExampleManagement.cpp
libDetection/: CMakeLists.txt
libDetection/include/detection/: AggregatedFeaturesDetector.hpp  Detector.hpp  DetectorTester.hpp  DetectorTrainer.hpp
libDetection/src/detection/: AggregatedFeaturesDetector.cpp  DetectorTester.cpp  DetectorTrainer.cpp
libImageIO/: CMakeLists.txt
libImageIO/include/imageio/: AnnotatedImage.hpp  AnnotatedImageSource.hpp  Annotation.hpp  AnnotationSink.hpp  AnnotationSource.hpp  Annotations.hpp  BobotAnnotationSink.hpp  BobotAnnotationSource.hpp  BobotLandmarkSink.hpp  BobotLandmarkSource.hpp  CameraImageSource.hpp  DirectoryImageSink.hpp  DirectoryImageSource.hpp  DlibImageSource.hpp  EmptyAnnotationSource.hpp  EmptyLandmarkSource.hpp  ImageSource.hpp  LandmarkSink.hpp  OrderedAnnotatedImageSource.hpp  SingleAnnotationSink.hpp  SingleAnnotationSource.hpp  SingleLandmarkSink.hpp  SingleLandmarkSource.hpp  VideoImageSink.hpp  VideoImageSource.hpp
libImageIO/src/imageio/: BobotAnnotationSink.cpp  BobotAnnotationSource.cpp  BobotLandmarkSource.cpp  CameraImageSource.cpp  DirectoryImageSink.cpp  DirectoryImageSource.cpp  DlibImageSource.cpp  OrderedAnnotatedImageSource.cpp  SingleAnnotationSink.cpp  SingleAnnotationSource.cpp  SingleLandmarkSource.cpp  VideoImageSink.cpp  VideoImageSource.cpp
libImageProcessing/: CMakeLists.txt
libImageProcessing/include/imageprocessing/: FeatureExtractor.hpp  ImagePyramid.hpp  ImagePyramidLayer.hpp  Patch.hpp  VersionedImage.hpp
libImageProcessing/include/imageprocessing/extraction/: AggregatedFeaturesExtractor.hpp  ExactFhogExtractor.hpp  FeatureExtractor.hpp
libImageProcessing/include/imageprocessing/filtering/: AggregationFilter.hpp  BgrToLuvConverter.hpp  BoxConvolutionFilter.hpp  ChainedFilter.hpp  ChannelExtractor.hpp  ColorSpaceConversionFilter.hpp  ConversionFilter.hpp  ConvolutionFilter.hpp  FhogAggregationFilter.hpp  FhogFilter.hpp  FilterTree.hpp  FpdwFeaturesFilter.hpp  GradientFilter.hpp  GradientHistogramFilter.hpp  GradientMagnitudeFilter.hpp  GradientOrientationFilter.hpp  GrayscaleFilter.hpp  HistogramFilter.hpp  ImageFilter.hpp  ResizingFilter.hpp  TriangularConvolutionFilter.hpp
libImageProcessing/src/imageprocessing/: ImagePyramid.cpp
libImageProcessing/src/imageprocessing/extraction/: AggregatedFeaturesExtractor.cpp  ExactFhogExtractor.cpp
libImageProcessing/src/imageprocessing/filtering/: ChainedFilter.cpp  ColorSpaceConversionFilter.cpp  ConversionFilter.cpp  ConvolutionFilter.cpp  FhogAggregationFilter.cpp  FhogFilter.cpp  GrayscaleFilter.cpp  ResizingFilter.cpp
libLogging/: CMakeLists.txt
libSvm/: CMakeLists.txt
libSvm/include/: svm.h
libSvm/include/libsvm/: LibSvmClassifier.hpp  LibSvmKernelParamSetter.hpp  LibSvmTrainer.hpp  LibSvmUtils.hpp
libSvm/src/: svm.cpp
libSvm/src/libsvm/: LibSvmTrainer.cpp  LibSvmUtils.cpp
libTracking/: CMakeLists.txt
libTracking/include/tracking/: MultiTracker.hpp  SingleTracker.hpp  Tracker.hpp
libTracking/include/tracking/filtering/: ClassifierMeasurementModel.hpp  CombinedMeasurementModel.hpp  ConstantVelocityModel.hpp  CorrelatedCombinationModel.hpp  IndependentCombinationModel.hpp  MeasurementModel.hpp  MotionModel.hpp  Particle.hpp  ParticleFilter.hpp  RandomWalkModel.hpp  RepellingMeasurementModel.hpp  ScoreMeasurementModel.hpp  TargetState.hpp
libTracking/src/tracking/: MultiTracker.cpp  SingleTracker.cpp  Tracker.cpp
libTracking/src/tracking/filtering/: Particle.cpp  ParticleFilter.cpp  TargetState.cpp
resources/annotation/: README.md  all.xml  frontal-profile.xml  frontal.xml  other.xml  profile.xml  upright.xml
resources/detection/: 40x40_10  40x40_5
resources/feature/: fhog4-4x10  fhog6-4x10  fhog9-4x10
resources/svm/: svm-frontal-fhog4-4x10  svm-frontal-fhog6-4x10  svm-frontal-fhog9-4x10
resources/training/: c10-bs3-max30k  c10-bs3-max50k  c10-bs3-max50k-prob
trackingBenchmarkApp/: CMakeLists.txt  TrackingBenchmark.cpp  algorithm.cfg
