SET(SUBPROJECT_NAME DetectorTrainer)
PROJECT(${SUBPROJECT_NAME})

MESSAGE(STATUS "Configuring ${SUBPROJECT_NAME}")

FIND_PACKAGE(Boost 1.48.0 REQUIRED system)
FIND_PACKAGE(OpenCV 2.4.3 REQUIRED core highgui)

INCLUDE_DIRECTORIES(${Detection_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${SVM_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${Classification_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ImageProcessing_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ImageIO_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(${SUBPROJECT_NAME}
	DetectorTrainer.cpp
)
TARGET_LINK_LIBRARIES(${SUBPROJECT_NAME}
	Detection
	SVM
	Classification
	ImageProcessing
	ImageIO
	${OpenCV_LIBS}
	${Boost_LIBRARIES}
)

INSTALL(TARGETS ${SUBPROJECT_NAME}
	RUNTIME DESTINATION bin
)
