SET( SUBPROJECT_NAME SingleTracker )
PROJECT( ${SUBPROJECT_NAME} )
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET( ${SUBPROJECT_NAME}_VERSION_MAJOR 0 )
SET( ${SUBPROJECT_NAME}_VERSION_MINOR 1 )

message(STATUS "=== Configuring ${SUBPROJECT_NAME} ===")

# find dependencies
FIND_PACKAGE(OpenCV 2.4.3 REQUIRED core highgui)

# add dependencies
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ImageIO_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ImageProcessing_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${Classification_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${SVM_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${Tracking_SOURCE_DIR}/include)

# make executable
ADD_EXECUTABLE(${SUBPROJECT_NAME}
  SingleTracker.cpp
)
TARGET_LINK_LIBRARIES(${SUBPROJECT_NAME}
	Tracking
	SVM
	Classification
	ImageProcessing
	ImageIO
	${OpenCV_LIBS}
)

INSTALL(TARGETS ${SUBPROJECT_NAME}
	RUNTIME DESTINATION bin
)
